--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageClassInclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageClassInclude.html
@@ -1,9 +1,14 @@
 <div>
     <p>
-        Semicolon-separated list of assemblies to include in the coverage. The default is unset. If unset, no specific
-        include statements will be generated for DotCover's configuration.
+        Includes the specified classes in coverage.
+
+    </p>
+</div>
+
+<div>
+    <p>
         For an in-depth explanation of how filtering is applied, please see the
         <a href=" https://www.jetbrains.com/help/dotcover/Running_Coverage_Analysis_from_the_Command_LIne.html">DotCover
             documentation</a>
     </p>
-</div>s
+</div>
