Text improvements Clarification of intended use.

--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-processInclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-processInclude.html
@@ -1,6 +1,6 @@
 <div>
     <p>
-        Semicolon-separated list of process names. These process will be considered part of the test execution when
+        Semicolon-separated list of process names. These processes will be considered in scope for the test execution when
         DotCover is gathering coverage data. This can be helpful in scenarios where it is necessary to strictly define
         the scope of executables that are part of a test.
 
