--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-processInclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-processInclude.html
@@ -1,8 +1,7 @@
 <div>
     <p>
         Semicolon-separated list of process names. These processes will be considered in scope for the test execution when
-        DotCover is gathering coverage data. This can be helpful in scenarios where it is necessary to strictly define
-        the scope of executables that are part of a test.
+        DotCover is gathering coverage data. This is helpful when it is necessary to restrict what executables are part of a test.
 
         For an in-depth explanation of how filtering is applied, please see the
         <a href=" https://www.jetbrains.com/help/dotcover/Running_Coverage_Analysis_from_the_Command_LIne.html">DotCover
