Code cleanup done by IDEA.

--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestPlatform.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestPlatform.html
@@ -1,5 +1,6 @@
 <div>
     <p>
-        The platform that is targeted by the tests when run through the test runner. Currently x86, x64 and ARM are supported.
+        The platform that is targeted by the tests when run through the test runner. Currently x86, x64 and ARM are
+        supported.
     </p>
 </div>
