--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-processInclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-processInclude.html
@@ -1,7 +1,9 @@
 <div>
     <p>
-        Semicolon-separated list of process names. These processes will be considered in scope for the test execution when
-        DotCover is gathering coverage data. This is helpful when it is necessary to restrict what executables are part of a test.
+        Semicolon-separated list of process names. These processes will be considered in scope for the test execution
+        when
+        DotCover is gathering coverage data. This is helpful when it is necessary to restrict what executables are part
+        of a test.
 
         For an in-depth explanation of how filtering is applied, please see the
         <a href=" https://www.jetbrains.com/help/dotcover/Running_Coverage_Analysis_from_the_Command_LIne.html">DotCover
