Fix incorrect resolution of local paths and robustness
Fix incorrect resolution of file paths on Jenkins agents.
Skip coverage report generation if no test dlls were matched.
Add unit tests.
Refactoring of step setup code.

--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-detailedXMLReportPath.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-detailedXMLReportPath.html
@@ -1,6 +1,6 @@
 <div>
     <p>
-        Name of the HTML report with coverage data that DotCover will generate. The default is unset. If unset, no
-        report will be generated.
+        Set the path to the detailed XML report with coverage data that DotCover will generate. The default is unset in which
+        case DotCover will not generate this report.
     </p>
 </div>
