--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestArgs.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestArgs.html
@@ -1,6 +1,6 @@
 <div>
     <p>
         Additional arguments to pass to the VsTest test runner. These are simply passed through to the runner, so take
-        care to quote properly!
+        care to quote them properly!
     </p>
 </div>
