--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestAssemblyFilter.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestAssemblyFilter.html
@@ -1,6 +1,5 @@
 <div>
     <p>
-        A glob that picks the test assemblies to include when gathering coverage data. The default value is
-        ${descriptor.DEFAULT_TEST_ASSEMBLIES_GLOB}.
+        A glob that picks the test assemblies to include when gathering coverage data. The default value is **/*Test/bin/**/Release/*Test.dll
     </p>
 </div>
