--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageClassInclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageClassInclude.html
@@ -1,14 +1,11 @@
 <div>
     <p>
-        Includes the specified classes in coverage.
-
+        Includes the specified classes for which coverage data will be generated.
     </p>
-</div>
-
-<div>
     <p>
         For an in-depth explanation of how filtering is applied, please see the
         <a href=" https://www.jetbrains.com/help/dotcover/Running_Coverage_Analysis_from_the_Command_LIne.html">DotCover
             documentation</a>
     </p>
 </div>
+
