--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageExclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageExclude.html
@@ -1,6 +1,10 @@
 <div>
     <p>
-        Excludes the specified assemblies.
+        Excludes the specified assemblies from coverage data. Note, that in addition to this exclusion definition,
+        the assemblies matched by the glob in the global tool configuration for DotCover (named mandatory excludes) will
+        ALWAYS be appended.
+    </p>
+    <p>
         For an in-depth explanation of how filtering is applied, please see the
         <a href=" https://www.jetbrains.com/help/dotcover/Running_Coverage_Analysis_from_the_Command_LIne.html">DotCover
             documentation</a>
