--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageFunctionInclude.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-coverageFunctionInclude.html
@@ -1,6 +1,8 @@
 <div>
     <p>
-        Semicolon-separated list of methods to include in the coverage
+        Semicolon-separated list of names of methods to include in the coverage.
+    </p>
+    <p>
         For an in-depth explanation of how filtering is applied, please see the
         <a href=" https://www.jetbrains.com/help/dotcover/Running_Coverage_Analysis_from_the_Command_LIne.html">DotCover
             documentation</a>
