Refactoring and tests
Add more tests.
Refactor existing tests.

--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-detailedXMLReportPath.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-detailedXMLReportPath.html
@@ -1,6 +1,7 @@
 <div>
     <p>
-        Set the path to the detailed XML report with coverage data that DotCover will generate. The default is unset in which
+        Set the path to the detailed XML report with coverage data that DotCover will generate. The default is unset in
+        which
         case DotCover will not generate this report.
     </p>
 </div>
