--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestCaseFilter.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestCaseFilter.html
@@ -1,6 +1,8 @@
 <div>
     <p>
         The testcase filter to pass to vstest.
-        See <a href="https://docs.microsoft.com/en-us/visualstudio/test/vstest-console-options?irgwc=1&OCID=AID2000142_aff_7593_1375745&tduid=(ir__vbyjjphsywkfr1ve0hnrewwq9n2xjlp6grxrzewx00)(7593)(1375745)()()&irclickid=_vbyjjphsywkfr1ve0hnrewwq9n2xjlp6grxrzewx00&view=vs-2019">this page</a> for in-depth explanation of vstest parameters.
+        See <a
+            href="https://docs.microsoft.com/en-us/visualstudio/test/vstest-console-options?irgwc=1&OCID=AID2000142_aff_7593_1375745&tduid=(ir__vbyjjphsywkfr1ve0hnrewwq9n2xjlp6grxrzewx00)(7593)(1375745)()()&irclickid=_vbyjjphsywkfr1ve0hnrewwq9n2xjlp6grxrzewx00&view=vs-2019">this
+        page</a> for in-depth explanation of vstest parameters.
     </p>
 </div>
