--- a/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestAssemblyFilter.html
+++ b/src/main/resources/io/jenkins/plugins/testing/DotCoverStep/help-vsTestAssemblyFilter.html
@@ -1,5 +1,6 @@
 <div>
     <p>
-        A glob that picks the test assemblies to include when gathering coverage data. The default value is **/*Test/bin/**/Release/*Test.dll
+        A glob that picks the test assemblies to include when gathering coverage data. The default value is
+        **/*Test/bin/**/Release/*Test.dll
     </p>
 </div>
